RESOLVED FIXED 263458
[WebGPU] rgb10a2 is incorrectly listed as a non-renderable format
https://bugs.webkit.org/show_bug.cgi?id=263458
Summary [WebGPU] rgb10a2 is incorrectly listed as a non-renderable format
Mike Wyrzykowski
Reported 2023-10-20 11:34:54 PDT
[WebGPU] rgb10a2 is incorrectly listed as a non-renderable format
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-20 11:35:10 PDT
Mike Wyrzykowski
Comment 2 2023-10-20 12:01:53 PDT
EWS
Comment 3 2023-10-23 11:19:55 PDT
Committed 269656@main (cd905f2c70f1): <https://commits.webkit.org/269656@main> Reviewed commits have been landed. Closing PR #19353 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.