[WebGPU] rgb10a2 is incorrectly listed as a non-renderable format https://bugs.webkit.org/show_bug.cgi?id=263458 <radar://117271426>

Reviewed by Tadeu Zagallo.

Listed incorrectly in switch statement, rgb10a2uint is renderable.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::isRenderableFormat):

Canonical link: https://commits.webkit.org/269656@main